--- a/www/composer.json
+++ b/www/composer.json
@@ -4,13 +4,14 @@
   "type": "project",
   "require": {
     "php": "^8.2",
-    "php-di/php-di": "^7.0",
-    "nikic/fast-route": "^1.3",
-    "twig/twig": "^3.0",
     "doctrine/dbal": "^4.0",
+    "nikic/fast-route": "^1.3",
+    "php-di/php-di": "^7.0",
     "predis/predis": "^2.2",
+    "symfony/console": "^8.0",
     "symfony/mailer": "^7.0",
     "symfony/mime": "^7.0",
+    "twig/twig": "^3.0",
     "vlucas/phpdotenv": "^5.6",
     "zircote/swagger-php": "^4.10"
   },
